# monitor-bondis

./: .gitignore  ARRIVAL_ESTIMATION_EXAMPLE.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  OSRM_SETUP.md  QUICK_START.md  START_HERE.md  STM API.json  STOPS_FEATURE.md  TRACKER_README.md  analizar_datos.py  main.py  models.py  pyproject.toml  query_passages.py  setup-osrm.sh  start-osrm.sh  test-osrm.sh  tracker.py
bus-tracker/: .env.example  Dockerfile  Gemfile  QUICKSTART.md  README.md  TRACKING_IMPROVEMENTS.md  TRACKING_README.md  WORKERS_SETUP.md
bus-tracker/app/controllers/: buses_controller.rb  stops_controller.rb  tracking_controller.rb
bus-tracker/app/helpers/: tracking_helper.rb
bus-tracker/app/javascript/: application.js
bus-tracker/app/jobs/: load_bus_schedules_job.rb  load_line_variants_job.rb  track_buses_job.rb
bus-tracker/app/models/: bus_passage.rb  bus_position.rb  bus_schedule.rb  bus_stop.rb  bus_tracking.rb  line.rb  line_variant.rb  stop_tracking.rb
bus-tracker/app/services/: bus_tracker_service.rb  osrm_service.rb  stm_api_client.rb  stm_auth_service.rb  stm_bus_service.rb
bus-tracker/config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  importmap.rb  master.key  routes.rb
bus-tracker/config/environments/: development.rb
bus-tracker/db/: schema.rb
bus-tracker/db/migrate/: 20251115185357_create_bus_stops.rb  20251115185407_create_bus_passages.rb  20251116031112_create_lines.rb  20251116031113_create_line_variants.rb  20251116032416_create_bus_schedules.rb  20251116040621_create_bus_trackings.rb  (+2 more)
(+3659 files in other folders)
