[project]
name = "monitor-bondis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "geopy>=2.4.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]
